syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Posts.Commands";

package sisa.blog.api.v1.posts.commands;

import "google/protobuf/wrappers.proto";

import "sisa/services/blog/v1/posts/enums.proto";

message CreatePostCommand {
  // reversed field must be reflect to the database
  reserved 1, 7 to 50; // other data fields
  reserved 52 to 60; // relationship fields

  string title = 2;
  string slug = 3;
  string excerpt = 4;
  string content = 5;
  repeated string tags = 6; // this is dedicated field in post, not a relationship, so it's not reversed

  google.protobuf.StringValue categoryId = 51;
}

message UpdatePostCommand {
  // reversed field must be reflect to the database
  reserved 7 to 50; // other data fields
  reserved 52 to 60; // relationship fields

  string id = 1;
  string title = 2;
  string slug = 3;
  string excerpt = 4;
  string content = 5;
  repeated string tags = 6;

  google.protobuf.StringValue categoryId = 51;
}

message PublishPostCommand {
  string id = 1;
  string remark = 3;
}

message DeletePostCommand {
  string id = 1;
}

message CreateCommentCommand {
  // reversed field must be reflect to the database
  reserved 1, 3 to 50; // other data fields
  reserved 51, 53 to 60; // relationship fields

  // data fields: from 1 to 50
  string content = 2;

  // relationship fields: from 51 to 60
  string postId = 52;
}
